--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "flowbite-react": "^0.10.1",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "sweetalert2": "^11.14.0"
